--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,22 @@ on:
   workflow_dispatch:
   pull_request:
     paths-ignore:
+      - '.github/FUNDING.yml'
+      - 'CHANGELOG.md'
+      - 'DEVELOPMENT.md'
       - 'LICENSE'
-      - 'README.md'
       - 'Makefile'
+      - 'README.md'
     branches:
       - main
   push:
     paths-ignore:
+      - '.github/FUNDING.yml'
+      - 'CHANGELOG.md'
+      - 'DEVELOPMENT.md'
       - 'LICENSE'
-      - 'README.md'
       - 'Makefile'
+      - 'README.md'
     branches:
       - main
 
