fix: update msi version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3490,8 +3490,8 @@ jobs:
           # 写回文件
           Set-Content -Path $filePath -Value $newContent -NoNewline
         env:
-          VERSION_SHORT: ${{ needs.get_version.outputs.version_short }}
-          COMMIT_COUNT: ${{ needs.get_version.outputs.commit_count }}
+          VERSION_SHORT: ${{ needs.create_release.outputs.version_short }}
+          COMMIT_COUNT: ${{ needs.create_release.outputs.commit_count }}
 
       - name: Create msi
         shell: pwsh
