--- a/.github/workflows/test-windows-msi.yml
+++ b/.github/workflows/test-windows-msi.yml
@@ -12,11 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version_step.outputs.version }}
-      commit_count: ${{ steps.commit_count_step.outputs.commit_count }}
+      version_short: ${{ steps.version_step.outputs.version_short }}
+      build_number: ${{ steps.version_step.outputs.build_number }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Install yq
         run: |
@@ -26,28 +25,31 @@ jobs:
           fi
           yq --version
 
-      - name: Set commit_count
-        id: commit_count_step
-        run: |
-          echo "Current ref name: $BRANCH"
-          echo "commit_count=$(git rev-list --count $BRANCH)" >> $GITHUB_OUTPUT
-        env:
-          BRANCH: ${{ github.ref_name }}
-
-      - name: Check commit_count
-        run: echo ${{ steps.commit_count_step.outputs.commit_count }}
-
       - name: Set version
         id: version_step
         run: |
-          PUB_VERSION=$(yq '.version' pubspec.yaml)
-          echo "$PUB_VERSION"
-          VERSION=$(echo "$PUB_VERSION" | sed -e "s/+\(.*\)$//g")
+          VERSION=$(yq '.version' pubspec.yaml)
           echo "$VERSION"
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "$VERSION_SHORT"
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "$BUILD_NUMBER"
+
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
 
       - name: Check version
-        run: echo ${{ steps.version_step.outputs.version }}
+        run: |
+          echo "version: $VERSION"
+          echo "version_short: $VERSION_SHORT"
+          echo "build_number: $BUILD_NUMBER"
+        env:
+          VERSION: ${{ steps.version_step.outputs.version }}
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
   msi:
     name: Create msi
@@ -116,13 +118,13 @@ jobs:
           $content = Get-Content -Path $filePath -Raw
 
           # 替换使用正则表达式
-          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION.$env:COMMIT_COUNT"
+          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION_SHORT.$env:BUILD_NUMBER"
 
           # 写回文件
           Set-Content -Path $filePath -Value $newContent -NoNewline
         env:
-          VERSION: ${{ needs.get_version.outputs.version }}
-          COMMIT_COUNT: ${{ needs.get_version.outputs.commit_count }}
+          VERSION_SHORT: ${{ needs.get_version.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.get_version.outputs.build_number }}
 
       - name: Create msi
         shell: pwsh
@@ -149,10 +151,10 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard_$env:VERSION_SUFFIX`_windows_$env:Platform`_en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard_$env:VERSION_SUFFIX`_windows_$env:Platform`_zh-CN.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard_$env:VERSION`_windows_$env:Platform`_en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard_$env:VERSION`_windows_$env:Platform`_zh-CN.msi"
         env:
-          VERSION_SUFFIX: ${{ needs.get_version.outputs.version }}+${{ needs.get_version.outputs.commit_count }}
+          VERSION: ${{ needs.get_version.outputs.version }}
 
       - uses: actions/upload-artifact@v4
         with:
