Update logo for linux

--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -7,7 +7,7 @@ priority: optional
 section: x11
 installed_size: 6604
 essential: false
-icon: logo/logo.png
+icon: logo/logo512.png
 
 postinstall_scripts:
   - echo "Installing PicGuard"
