--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -1,5 +1,5 @@
 display_name: PicGuard
-icon: logo/logo.png
+icon: logo/logo512.png
 summary: Your pictures, your signature.
 group: Application/Emulator
 vendor: kjxbyz
