--- a/.github/workflows/test-linux-flatpak-arm64.yml
+++ b/.github/workflows/test-linux-flatpak-arm64.yml
@@ -47,30 +47,30 @@ jobs:
 
       - name: Update version
         run: |
-          # Update flatpak/com.kjxbyz.PicGuard.json
+          # Update flatpak/com.kjxbyz.PicGuard.yml
           TAG="$([[ "$ENV" == "staging" ]] && echo "$TAG_NAME.pre" || echo "$TAG_NAME")"
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
 
-          url=https://github.com/picguard/picguard/releases/download/"$TAG"/picguard_"$RELEASE"_linux_aarch64.tar.gz
-          wget -O downloaded.tar.gz "$url"
-          sha256=$(sha256sum downloaded.tar.gz | awk '{print $1}')
-          rm -f downloaded.tar.gz
-          url=$url yq -i '.modules[3].sources[1].url = strenv(url)' flatpak/com.kjxbyz.PicGuard.json
-          sha256=$sha256 yq -i '.modules[3].sources[1].sha256 = strenv(sha256)' flatpak/com.kjxbyz.PicGuard.json
+          url=https://github.com/picguard/picguard/releases/download/"$TAG"/picguard_"$RELEASE"_linux_aarch64.deb
+          wget -O picguard.deb "$url"
+          sha256=$(sha256sum picguard.deb | awk '{print $1}')
+          rm -f picguard.deb
+          url=$url yq -i '.modules[0].sources[1].url = strenv(url)' flatpak/com.kjxbyz.PicGuard.yml
+          sha256=$sha256 yq -i '.modules[0].sources[1].sha256 = strenv(sha256)' flatpak/com.kjxbyz.PicGuard.yml
 
           desktop_url=https://raw.githubusercontent.com/picguard/picguard/"$TAG"/linux/shared/com.kjxbyz.PicGuard.desktop
           wget -O com.kjxbyz.PicGuard.desktop "$desktop_url"
           desktop_sha256=$(sha256sum com.kjxbyz.PicGuard.desktop | awk '{print $1}')
           rm -f com.kjxbyz.PicGuard.desktop
-          desktop_url=$desktop_url yq -i '.modules[3].sources[2].url = strenv(desktop_url)' flatpak/com.kjxbyz.PicGuard.json
-          desktop_sha256=$desktop_sha256 yq -i '.modules[3].sources[2].sha256 = strenv(desktop_sha256)' flatpak/com.kjxbyz.PicGuard.json
+          desktop_url=$desktop_url yq -i '.modules[0].sources[2].url = strenv(desktop_url)' flatpak/com.kjxbyz.PicGuard.yml
+          desktop_sha256=$desktop_sha256 yq -i '.modules[0].sources[2].sha256 = strenv(desktop_sha256)' flatpak/com.kjxbyz.PicGuard.yml
 
           appdata_url=https://raw.githubusercontent.com/picguard/picguard/"$TAG"/linux/shared/com.kjxbyz.PicGuard.appdata.xml
           wget -O com.kjxbyz.PicGuard.appdata.xml "$appdata_url"
           appdata_sha256=$(sha256sum com.kjxbyz.PicGuard.appdata.xml | awk '{print $1}')
           rm -f com.kjxbyz.PicGuard.appdata.xml
-          appdata_url=$appdata_url yq -i '.modules[3].sources[3].url = strenv(appdata_url)' flatpak/com.kjxbyz.PicGuard.json
-          appdata_sha256=$appdata_sha256 yq -i '.modules[3].sources[3].sha256 = strenv(appdata_sha256)' flatpak/com.kjxbyz.PicGuard.json
+          appdata_url=$appdata_url yq -i '.modules[0].sources[3].url = strenv(appdata_url)' flatpak/com.kjxbyz.PicGuard.yml
+          appdata_sha256=$appdata_sha256 yq -i '.modules[0].sources[3].sha256 = strenv(appdata_sha256)' flatpak/com.kjxbyz.PicGuard.yml
         env:
           ENV: ${{ github.event.inputs.env }}
           TAG_NAME: "v${{ steps.version_step.outputs.version }}"
@@ -89,7 +89,7 @@ jobs:
         uses: flatpak/flatpak-github-actions/flatpak-builder@master
         with:
           bundle: PicGuard_${{ steps.version_step.outputs.version }}_linux_aarch64.flatpak
-          manifest-path: flatpak/com.kjxbyz.PicGuard.json
+          manifest-path: flatpak/com.kjxbyz.PicGuard.yml
           cache: false
           restore-cache: false
           cache-key: flatpak-builder-${{ github.sha }}-no-cache-restored
