--- a/linux/packaging/pacman/make_config.yaml
+++ b/linux/packaging/pacman/make_config.yaml
@@ -53,6 +53,8 @@ provides:
 # application icon path relative to project url
 icon: logo/logo512.png
 
+metainfo: linux/shared/picguard.metainfo.xml
+
 keywords:
   - PicGuard
   - Watermark
