--- a/linux/packaging/appimage/make_config.yaml
+++ b/linux/packaging/appimage/make_config.yaml
@@ -25,6 +25,8 @@ generic_name: PicGuard
 categories:
   - Utility
 
+metainfo: linux/shared/picguard.metainfo.xml
+
 startup_notify: true
 
 # You can specify the shared libraries that you want to bundle with your app
