--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -2,7 +2,7 @@ display_name: PicGuard
 package_name: picguard
 maintainer:
   name: kjxbyz
-  email: kjxbyz@163.com
+  email: kjxbyz888@outlook.com
 priority: optional
 section: x11
 installed_size: 6604
