--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -4,7 +4,7 @@ summary: Your pictures, your signature.
 group: Application/Emulator
 vendor: kjxbyz
 packager: kjxbyz
-packagerEmail: kjxbyz@163.com
+packagerEmail: kjxbyz888@outlook.com
 license: MIT
 url: https://github.com/picguard/picguard
 build_arch: x86_64
