--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
         applicationId "com.kjxbyz.watermarkassistant"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 24
+        minSdkVersion 28
         targetSdkVersion 34
         versionName flutterVersionName
         versionCode flutterVersionCode.toInteger()
@@ -70,12 +70,6 @@ android {
                 keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
                 storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
             }
-            pro {
-                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH_PRO"))
-                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS_PRO")
-                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD_PRO")
-                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD_PRO")
-            }
         } else {
             free {
                 storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
@@ -83,6 +77,16 @@ android {
                 keyPassword keystoreProperties['keyPassword']
                 storePassword keystoreProperties['storePassword']
             }
+        }
+
+        if (System.getenv("ANDROID_KEYSTORE_PATH_PRO")) {
+            pro {
+                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH_PRO"))
+                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS_PRO")
+                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD_PRO")
+                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD_PRO")
+            }
+        } else {
             pro {
                 storeFile proKeystoreProperties['storeFile'] ? file(proKeystoreProperties['storeFile']) : null
                 keyAlias proKeystoreProperties['keyAlias']
