--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
       - 'CHANGELOG.md'
       - 'LICENSE'
       - 'Makefile'
+      - 'README-zh.md'
       - 'README.md'
     branches:
       - main
@@ -19,6 +20,7 @@ on:
       - 'CHANGELOG.md'
       - 'LICENSE'
       - 'Makefile'
+      - 'README-zh.md'
       - 'README.md'
     branches:
       - main
@@ -75,7 +77,7 @@ jobs:
       # Package the build.
       - name: Copy build for Android
         run: ls -la
-        working-directory: build/app/outputs/flutter-apk
+        working-directory: build/app/outputs/apk/freeStaging/release
 
       - name: Clean up
         if: ${{ always() }}
