--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,16 @@ android {
         versionCode flutterVersionCode.toInteger()
     }
 
+    // https://developer.android.com/build/configure-apk-splits
+    splits {
+        abi {
+            enable true
+            reset()
+            universalApk true  // If true, also generate a universal APK
+            include "armeabi-v7a", "arm64-v8a", "x86_64"
+        }
+    }
+
     signingConfigs {
         if (System.getenv("ANDROID_KEYSTORE_PATH")) {
             free {
@@ -142,3 +152,17 @@ flutter {
 }
 
 dependencies {}
+
+import com.android.build.OutputFile
+
+android.applicationVariants.all { variant ->
+  variant.outputs.each { output ->
+        def flavorName = variant.flavorName
+        def flavor = flavorName.replaceAll("(Staging|Production)", "")
+        def suffix = flavorName.contains("Staging") ? ".pre" : ""
+        def abi = output.getFilter(OutputFile.ABI)
+        def arch = abi == null ? "universal" : abi
+        def outputFileName = "PicGuard_${variant.versionName}+${variant.versionCode}${suffix}-${flavor}_${arch}.apk"
+        output.outputFileName = outputFileName
+    }
+}
