--- a/ios/Runner/Info-Pro.plist
+++ b/ios/Runner/Info-Pro.plist
@@ -17,6 +17,7 @@
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
+                <string>it</string>
 		<string>zh</string>
 	</array>
 	<key>CFBundleName</key>
