Fix invalid privacy manifest in app_settings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  app_settings: # add ios privacy manifest
-    git:
-      url: https://github.com/spencerccf/app_settings
+  app_settings: # e1d39e4ea052e9dd9a47fbab49737846d9b43264
+    path: ./plugins/app_settings
   cupertino_icons: ^1.0.8
   device_info_plus: ^10.1.2
   file_picker: ^8.1.2
