--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -14,6 +14,12 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleLocalizations</key>
+  <array>
+    <string>en</string>
+    <string>it</string>
+    <string>zh</string>
+  </array>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
